-runtime -test: Minor update for WatchdogFeature